# uma

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: main.py
src/data/: uci_data_provider.py
src/forest/: config.py  forest.py
src/tree/: config.py  eval_func.py  get_splits.py  node.py  tree.py
