[project]
name = "tournament-forest"
version = "0.1.0"
description = "Random forest classifier with tournament-based feature selection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "ucimlrepo>=0.0.7",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
fix = true
show-fixes = true
src = ["src"]

[tool.ruff.lint]
extend-select = ["I", "E", "W", "F", "C90", "B", "S", "ANN", "UP", "PL"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true

